// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <Footer /> should renders with props correctly 1`] = `
<footer
  className="footer"
>
  <div
    className="container-fluid"
  >
    <p
      className="footer-text"
    >
      <span>
        Transforming Usability
      </span>
        
      <span
        className="toggle-high-contrast"
      >
        <a
          onClick={[Function]}
        >
          Enable High Contrast Mode
        </a>
      </span>
    </p>
    <div
      className="footer-povered"
    >
      <span
        className="footer-povered-text"
      >
        Supported by
      </span>
      <a
        className="footer-logo"
        href="/"
      >
        <img
          alt="Ripple Icon"
          className="footer-logo-img"
          src="ripple-foundation-logo-footer.png"
        />
      </a>
    </div>
  </div>
</footer>
`;

exports[`Component <Footer /> should renders with props correctly 2`] = `
<footer
  className="footer"
>
  <div
    className="container-fluid"
  >
    <p
      className="footer-text"
    >
      <span>
        Transforming Usability
      </span>
        
      <span
        className="toggle-high-contrast"
      >
        <a
          onClick={[Function]}
        >
          Disable High Contrast Mode
        </a>
      </span>
    </p>
    <div
      className="footer-povered"
    >
      <span
        className="footer-povered-text"
      >
        Supported by
      </span>
      <a
        className="footer-logo"
        href="/"
      >
        <img
          alt="Ripple Icon"
          className="footer-logo-img"
          src="ripple-foundation-logo-footer.png"
        />
      </a>
    </div>
  </div>
</footer>
`;
